<resources>
    <string name="app_name">FamPlan</string>
    <string name="tvDaysleft">DAYS</string>
    <string name="tv1">Message goes here.</string>
    <string name="buttonOkay">Okay!</string>
    <string name="buttomendperiod">End period</string>
    <string name="tvwc">Welcome to Mobile-based Family Planning!</string>
    <string name="tvinputname">Please input your name below.</string>
    <string name="name">Name</string>
    <string name="tvperiodlasts">How long is your cycle?</string>
    <string name="buttonwcnext">Next</string>
    <string name="tvlastperiod">When did your last period start?</string>
    <string name="tvinputlastperiod">SELECT A DATE</string>
    <string name="tvperiodrange">How many days did it last? (Bleeding days)</string>
    <string name="buttonNext">Next</string>
    <string name="tvWelcometext">Getting to know you more..</string>
    <string name="tvnotehere">Come back later when your period ends.</string>
    <string name="buttongotit">Got it!</string>
    <string name="buttonyes">Yes. I still have my period today.</string>
    <string name="buttonno">No. It just ended.</string>
    <string name="tvconfirmationmsg">It seems that you just had your period, do you still have it today?</string>
    <string name="tvupdatemessage">How many days did your period last in this cycle?</string>
    <string name="tvwbtext">Welcomeback</string>
    <string name="tvwbmessage">Do you still have your period today?</string>
    <string name="buttonwbyes">Yes, I still have my period.</string>
    <string name="buttonwbno">No. It just ended.</string>
    <string name="buttonstartnow">Start</string>
    <string name="tvNEXTPERIOD">Nextperiod</string>
    <string name="indicatorguide">Indicator guide</string>
    <string name="tvdesc"><b><u>Period:</u></b> Indicates your next period prediction based on your previous period days.\n<b><u>Fertile:</u></b> Days during your menstrual cycle when you have the ability to become pregnant.\n<b><u>Ovulation:</u></b> You can only become pregnant if a sperm meets with fertilized egg.</string>
    <string name="tvdisclaimer">Disclaimer: Information provided above might be inaccurate for those with irregular periods.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_methods">Methods</string>
    <string name="tab_text_1">Family Planning</string>
    <string name="tab_text_2">Methods</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="FPtitle">Family Planning</string>

    <!-- LONG TEXT VIEWS-->
    <string name="text1">Family planning is the practice of controlling the number of
        children in a family and the intervals between their births. Contemporary notions of family
        planning, however, tend to place a woman and her childbearing decisions at the center of the discussion,
        as notions of womens empowerment and reproductive autonomy have gained traction in many parts of the
        world. Family planning may involve consideration of the number of children a woman wishes to have,
        including the choice to have no children, as well as the age at which she wishes to have them.
        These matters are influenced by external factors such as marital situation, career considerations,
        financial position, any disabilities that may affect their ability to have children and raise them,
        besides many other considerations.
        \n
        If sexually active, family planning may involve the use of contraception
        and other techniques to control the timing of reproduction. Other techniques commonly used include sexuality education,
        prevention and management of sexually transmitted infections,pre-conception counseling and management, and infertility management.
        \n
        \n
        Family planning is sometimes used as a synonym or euphemism for access to and the use of contraception. However,
        it often involves methods and practices in addition to contraception. Additionally, there are many who might wish
        to use contraception but are not, necessarily, planning a family (e.g., unmarried adolescents, young married couples
        delaying childbearing while building a career); family planning has become a catch-all phrase for much of the work
        undertaken in this realm. It is most usually applied to a female-male couple who wish to limit the number of children
        they have and/or to control the timing of pregnancy (also known as spacing children). Family planning may encompass sterilization,
        as well as abortion.
        \n
        \n Do you know when your last menstrual period began or how long it lasted? If not, it might be time to
        start paying attention.
        \n
        Tracking your menstrual cycles can help you understand what's normal for you,
        time ovulation and identify important changes — such as a missed period or unpredictable menstrual bleeding.
        While menstrual cycle irregularities usually aren't serious, sometimes they can signal health problems.
        \n
        \n
        <b>What's the menstrual cycle?</b>
        \n
        The menstrual cycle is the monthly series of changes a woman's body goes through in preparation for the possibility of pregnancy.
        Each month, one of the ovaries releases an egg — a process called ovulation. At the same time, hormonal changes prepare
        the uterus for pregnancy. If ovulation takes place and the egg isn't fertilized, the lining of the uterus sheds through
        the vagina. This is a menstrual period.
        \n
        \n
        <b>What's normal?</b>
        \n
        The menstrual cycle, which is counted from the first
        day of one period to the first day of the next, isn't the same for every woman. Menstrual flow might occur every 21 to
        35 days and last two to seven days. For the first few years after menstruation begins, long cycles are common.
        However, menstrual cycles tend to shorten and become more regular as you age.
        \n
        Your menstrual cycle might be regular — about the same length every month — or somewhat irregular, and your period might
        be light or heavy, painful or pain-free, long or short, and still be considered normal. Within a broad range, "normal"
        is what's normal for you.
        \n
        Keep in mind that use of certain types of contraception, such as extended-cycle birth control pills and intrauterine
        devices (IUDs), will alter your menstrual cycle. Talk to your health care provider about what to expect.
        \n
        \n
        When you get close to menopause, your cycle might become irregular again. However, because the risk of uterine
        cancer increases as you age, discuss any irregular bleeding around menopause with your health care provider.</string>
    <string name="family_planning">Family Planning</string>
    <string name="a_brief_summary_to_understand_family_planning">A brief summary to understand family planning</string>
    <string name="methods">Methods</string>
    <string name="menu">MENU</string>
    <string name="calendar">Calendar</string>
    <string name="period_tracker">Period Tracker</string>
    <string name="period_history">Period History</string>
    <string name="vid">Videos</string>
    <string name="about_us">About us</string>

</resources>
