<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFC4"
    tools:context="org.gandroid.motif.Welcomescreen">

    <TextView
        android:id="@+id/tvwc"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:textColor="#FD8C84"
        android:fontFamily="@font/athiti_extralight"
        android:gravity="start"
        android:text="@string/tvwc"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tviputname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/athiti_extralight"
        android:text="@string/tvinputname"
        android:textColor="#309C9A"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvwc"
        tools:targetApi="jelly_bean"
        android:layout_marginLeft="8dp" />

    <EditText
        android:fontFamily="@font/athiti_extralight"
        android:id="@+id/editTextname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textColor="#309C9A"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tviputname"
        tools:targetApi="jelly_bean"
        android:gravity="start" />

    <TextView
        android:fontFamily="@font/athiti_extralight"
        android:id="@+id/tvFDBperiodrange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvperiodlasts"
        android:textColor="#309C9A"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextname"
        tools:targetApi="jelly_bean"
        android:layout_marginLeft="8dp" />

    <Spinner
        android:fontFamily="@font/athiti_extralight"
        android:id="@+id/spinnerwcinputperiodrange"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFDBperiodrange" />

    <Button
        android:fontFamily="@font/athiti_extralight"
        android:textColor="#FFFFC4"
        android:background="@drawable/rectangle"
        android:id="@+id/buttonwcnext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/buttonwcnext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerwcinputperiodrange"
        />

</android.support.constraint.ConstraintLayout>
