<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingBottom="16dp"
    android:background="#FFFFC4"
    android:textColor="#FD8C84"
    tools:context="org.gandroid.motif.CalendarView">


    <TextView
        android:id="@+id/CurrentMonth"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#F2BF5E"
        android:textAlignment="center"
        android:textSize="24sp" />

        <com.github.sundeepk.compactcalendarview.CompactCalendarView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/compactcalendar_view"
            android:layout_width="fill_parent"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:layout_height="250dp"
            android:layout_below="@+id/CurrentMonth"
            app:compactCalendarTargetHeight="250dp"
            app:compactCalendarTextSize="12sp"
            app:compactCalendarEventIndicatorStyle="fill_large_indicator"
            app:compactCalendarBackgroundColor="#FD8C84"
            app:compactCalendarTextColor="#000000"
            app:compactCalendarMultiEventIndicatorColor="#fff"
            />

        <ImageView
            android:id="@+id/indicators"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/compactcalendar_view"
            app:srcCompat="@drawable/indicator"
            android:contentDescription="@string/indicatorguide"/>

        <TextView
            android:id="@+id/tvindicatordesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/indicators"
            android:layout_marginTop="15dp"
            android:textStyle="normal"
            android:text="@string/tvdesc" />

    <TextView
        android:id="@+id/tvdisclaimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvindicatordesc"
        android:layout_marginTop="15dp"
        android:textStyle="normal"
        android:textColor="#FF0000"
        android:text="@string/tvdisclaimer" />


</RelativeLayout>